--- a/style.css
+++ b/style.css
@@ -16,7 +16,10 @@ body{
     display: flex;
     justify-content:center;
     align-items: center;
-    background-image:url(assets/images/background-pattern-desktop.svg);
+    background-image: url(mountains-the-game-lake-forest-wallpaper-preview.jpg);
+    background-repeat: no-repeat;
+    backdrop-filter:blur(7px);
+    background-size:cover;
     background-repeat:no-repeat;
     background-size:2000px;
 }
@@ -30,6 +33,7 @@ body{
     gap:2.5rem;
     background-color: var(--White);
     border-radius:1rem;
+    box-shadow:0px 20px 45px var(--WhiteLightpink);
     width:30rem;
     margin:100px;
     margin-top:0px;
